Fixed Selection overlapping PE Search Field

--- a/ui/scripts/PackageExplorer/tt.css
+++ b/ui/scripts/PackageExplorer/tt.css
@@ -14,6 +14,7 @@
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 
